# Comparison-of-LLMs

./: .dockerignore  .geminiignore  .gitignore  AGENTS.md  CLAUDE.md  Claude-self-hosted-sandboxes-bestpractices.html  Claude-self-hosted-sandboxes-bestpractices.md  GEMINI.md  Gemini.md  Google-sandbox-advanced-2026.md  Google-sandbox-best-practices-2026.html  Google-sandbox-best-practices-2026.md  MIGRATION_PROGRESS.md  Makefile  README.md  antigravity-slash-commands-guide-v2.md  antigravity-slash-commands-guide.html  antigravity-slash-commands-guide.md  claude-code-slash-commands-guide.html  claude-code-slash-commands-guide.md  claude-managed-agents-guide.html  claude-managed-agents-guide.md  coderabbit-guide.html  copilot-code-review.html  docker-compose.yml  gemini-agent-harness-engineering-guide.html  gemini-agent-harness-engineering-guide.md  git_worktree.html  google-antigravity-sdd-best-practices-guide.md  google-harness-engineering.html  google-harness-engineering.md  harness-engineering-complete-guide.html  harness-engineering-complete-guide.md  hermes-agent-advanced-guide.html  hermes-agent-advanced-guide.md  hermes-agent-best-practices.md  netlify.toml  openai-harness-engineering-guide.html  openai-harness-engineering-guide.md  openclaw-advanced-agent-security-guide.html  (+10 more)
scraper/: pyproject.toml
scraper/src/scraper/: __init__.py  browser.py  exchange.py
scraper/src/scraper/providers/: anthropic.py  aws.py  deepseek.py  google.py  xai.py  (+1 more)
scraper/tests/: test_browser.py  test_imports.py  test_providers.py  test_tools.py
scraper/tests/smoke/: test_smoke.py
(+341 files in other folders)
