[project]
name = "scraper"
version = "0.1.0"
description = "LLM-Studies auto-scraper"
readme = "README.md"
authors = [
    { name = "myoshizumi", email = "myoshizumi@alumni.berklee.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49.0",
    "httpx>=0.28.0",
    "python-dateutil>=2.9.0",
    "pydantic>=2.10.0",
]

[project.scripts]
scraper = "scraper.main:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
]

[tool.coverage.run]
# 計測対象はパッケージ本体のみ
source = ["src/scraper"]
# coverage.xml のファイルパスを相対化 → SonarQube のソースパス解決ズレ（カバレッジ 0%）を防ぐ
relative_files = true

# 既定の `uv run pytest` の出力は変更しない（決定論性維持）。
# カバレッジは明示フラグで生成する: uv run pytest --cov --cov-report=xml
#   → make sonar / .github/workflows/sonarqube.yml が付与する。
